...

    saveToken(newToken || "")
  }

  return (
    <Screen>
      <ScrollView {...testProps("developer-screen-scroll-view")}>
        <View style={styles.screenContainer}>
          <Button
            title="Log out"
            containerStyle={styles.button}
            onPress={async () => {
              await logout()
              Alert.alert("state successfully deleted. Restart your app")
            }}
            {...testProps("logout button")}
          />
          <Button
            title="Send device token"
            containerStyle={styles.button}
            onPress={async () => {
              if (token && client) {
...
            </Text>
            <Text selectable>
              USD per 1 sat: {usdPerSat ? `$${usdPerSat}` : "No price data"}
            </Text>
            <Text>Hermes: {String(Boolean(usingHermes))}</Text>
            <Button
              {...testProps("Save Changes")}
              title="Save changes"
              style={styles.button}
              onPress={handleSave}
              disabled={!changesHaveBeenMade}
            />
            <Text style={styles.textHeader}>Update Environment</Text>
...
