...
        <Text style={styles.text}>{header}</Text>
        <Image source={bowserLogo} />
        <Text style={styles.text}>{text}</Text>
        <TextInput  style={styles.textEntry} 
                    onChangeText={input => (setPhone(input))}
                    keyboardType="number-pad"
                    textContentType="telephoneNumber"
                    placeholder="Phone Number"
                    maxLength={12}
                    >
                      {phone}
        </TextInput>
      </View>
...
    <Text style={styles.text}>{header}</Text>
    <Image source={bowserLogo} />
    <Text style={styles.text}>{text}</Text>
    <TextInput  style={styles.textEntry} 
                onChangeText={input => (setCode(input))}
                keyboardType="number-pad"
                textContentType="oneTimeCode"
                placeholder="6 Digits Code"
                >
                  {code}
    </TextInput>
    </View>
      <Button title="Next" 
...
