...

  return (
    <Screen>
      <Pressable
        onPress={() => setSecretMenuCounter(secretMenuCounter + 1)}
        style={styles.logoContainer}
        {...testProps("logo-button")}
      >
        <Image source={AppLogo} style={styles.logo} />
      </Pressable>
      <View style={styles.bottom}>
        {/* Help Icon */}
        <View style={styles.helpIconContainer}>
...
