...
  "common": {
    "Fee": "Fee",
    "Total": "Total",
    "activateWallet": "Activate Wallet",
    "address": "Address",
    "amountRequired": "Amount is required",
    "back": "Back",
    "bank": "Bank",
    "bankAccount": "Cash Account",
    "bitcoin": "Bitcoin",
    "bitcoinPrice": "Bitcoin Price",
    "cancel": "Cancel",
    "close": "Close",
...
